<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="@dimen/cardview_default_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_confirmed_head"
                        style="@style/HeaderCardText"
                        setSelectable="@{true}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/cv_confirmed"
                        android:textColor="@color/primary_blue"
                        android:transitionName="@string/cv_confirmed" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/confirmed" />

                    <TextView
                        android:id="@+id/tv_confirmed"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/primary_blue"
                        android:transitionName="@string/trsn_confirmed"
                        tools:text="confirmed" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_active_head"
                        style="@style/HeaderCardText"
                        setSelectable="@{true}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/cv_active"
                        android:textColor="@color/warning_orange"
                        android:transitionName="@string/cv_active" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/active" />

                    <TextView
                        android:id="@+id/tv_active"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/warning_orange"
                        android:transitionName="@string/trsn_active"
                        tools:text="active" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_deaths_head"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/HeaderCardText"
                        setSelectable="@{true}"
                        android:text="@string/cv_deaths"
                        android:textColor="@color/danger_red"
                        android:transitionName="@string/cv_deaths" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/deaths" />

                    <TextView
                        android:id="@+id/tv_deaths"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/danger_red"
                        android:transitionName="@string/trsn_deaths"
                        tools:text="deaths" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_recovered_head"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/HeaderCardText"
                        setSelectable="@{true}"
                        android:text="@string/cv_recovered"
                        android:textColor="@color/success_green"
                        android:transitionName="@string/cv_recovered" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/recovered" />

                    <TextView
                        android:id="@+id/tv_recovered"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/success_green"
                        android:transitionName="@string/trsn_recovered"
                        tools:text="recovered" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>


</layout>