<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CountryStateDetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <FrameLayout
                android:id="@+id/toolbar_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="@string/app_name" />

                <com.miguelcatalan.materialsearchview.MaterialSearchView
                    android:id="@+id/search_states"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            tools:context=".CountryStateDetailActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="blocksDescendants"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_india_head"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:transitionName="@string/trsn_state_country_name" />


                <TextView
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="TOTAL CASES"
                    android:textColor="@color/info_bg" />

                <include
                    android:id="@+id/incl_totalcases_country"
                    layout="@layout/content_totalcases_view" />

                <include
                    android:id="@+id/incl_totalcases_chartcountry"
                    layout="@layout/content_totalcases_chart" />


                <FrameLayout
                    android:id="@+id/fl_statescountry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:id="@+id/tv_nodatac"
                        android:layout_width="match_parent"
                        android:layout_height="700dp"
                        android:gravity="center_horizontal"
                        android:text="@string/no_data"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_countrystatelist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutAnimation="@anim/layout_animation_fall_down"
                        android:nestedScrollingEnabled="true"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        tools:listitem="@layout/item_statewise_list" />

                </FrameLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>